tests/ui/associated-types/higher-ranked-projection.bad.stderr
error: higher-ranked subtype error
  --> $DIR/higher-ranked-projection.rs:23:5
   |
LL |     foo(());
   |     ^^^^^^^

error: aborting due to 1 previous error

